# EOP

./: CMakeLists.txt  main.c  run.bat
EOP/course/: CMakeLists.txt  EOP_Course.c  EOP_Course.h
EOP/course/controller/: controllers_register.c  controllers_register.h
EOP/course/data/db/: db.c
EOP/course/data/db/dao/: Db_creation.c  EOP_Course_Dao.c  EOP_Course_Dao.h
EOP/course/data/db/tables/course_table/: EOP_Course_Table.c  EOP_Course_Table.h
EOP/course/data/entities/content/: EOP_Content.c  EOP_Content.h
EOP/course/data/entities/homework/: EOP_homework.c  EOP_homework.h
EOP/course/data/entities/lesson/: EOP_Lesson.c  EOP_Lesson.h
EOP/course/data/entities/tag/: EOP_Tag.h
EOP/course/data/entities/test/: EOP_test.h
EOP/course/data/entities/test/interactiveTest/: EOP_interactiveTest.h
EOP/course/data/entities/test/practiceTest/: EOP_practiceTest.h
EOP/course/data/entities/test/theoryTest/: EOP_theoryTest.h
